--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     padding: 3px;
     }
 </style>
-<form action="../cgi-bin/db.cgi" method="get">
+<form action="../cgi-bin/db.py" method="get">
 <div id="outer-div" width="100%"><h1>APL701 - Project 3</h1></div>
 <div class="block" id="inner-div">
     <label for="main">User ID:</label>
